k8s/stress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stress-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: stress
  template:
    metadata:
      labels:
        app: stress
    spec:
      containers:
        - name: stress
          image: 000000000000.dkr.ecr.ap-northeast-2.amazonaws.com/stress:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
            limits:
              cpu: "768m"
              memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: stress-svc
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: stress
